# pdm-b7

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_exploration_and_feature_selection.ipynb  01a_segments_abnormal_using_alarm_state.ipynb  02_preprocessing_training.ipynb  02_training.ipynb  03_lgbm_classifier.ipynb  03_load_and_predict.ipynb  04_lstm_classifier.ipynb  04_xgboost_model.ipynb  05_testing_lgbm.ipynb  06_lstm_ae.ipynb  07_comparation_model.ipynb  ilapak10_train.csv
notebooks/data/: test.csv
src/dashboard/: README.md  app.py
src/dashboard/components/: README.md  charts.py  sidebar.py
src/dashboard/config/: settings.py
src/dashboard/tabs/: README.md  leakage.py  overview.py  production.py  temperature.py
src/dashboard/utils/: README.md  database.py  feature_engineering.py  helpers.py  predicting.py
src/models/v1/ilapak3/: lgbm-model-ilapak3-v1.0.0.pkl  params-model-ilapak3-v1.0.0.pkl
