[project]
name = "lstm-ae-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.1",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "python-dotenv>=1.1.0",
    "scikit-learn==1.6.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "streamlit-autorefresh>=1.0.1",
]
