[project]
name = "lstm-ae-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "joblib>=1.5.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.45.1",
    "streamlit-autorefresh>=1.0.1",
    "tensorflow>=2.19.0",
    "twilio>=9.6.3",
    "xgboost>=3.0.2",
]
